<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="caribehostal.caseroserver.view.owner.OwnerCheckRegister">


    <ScrollView
        android:id="@+id/scrollViewCheck"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkBox_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_check_nombre"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/checkBox_nombre"
                android:hint="@string/nombre">

                <EditText
                    android:id="@+id/owner_check_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"/>

            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/checkBox_carnet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/input_check_nombre"
                android:layout_marginTop="20dp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_check_carnet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/input_check_nombre"
                android:layout_toRightOf="@+id/checkBox_carnet"
                android:hint="@string/carnet">

                <EditText
                    android:id="@+id/owner_check_carnet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:inputType="number"/>

            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/checkBox_cell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:enabled="false"
                android:layout_below="@+id/input_check_carnet"
                android:layout_marginTop="20dp"/>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_check_cell"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_check_carnet"
                android:layout_toRightOf="@+id/checkBox_cell"
                android:hint="@string/celular">

                <EditText
                    android:id="@+id/owner_check_cell"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:inputType="phone"/>

            </android.support.design.widget.TextInputLayout>


            <CheckBox
                android:id="@+id/checkBox_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/input_check_cell"
                android:layout_marginTop="20dp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_check_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_check_cell"
                android:layout_toRightOf="@+id/checkBox_user"
                android:hint="@string/user">

                <EditText
                    android:id="@+id/owner_check_user"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"/>

            </android.support.design.widget.TextInputLayout>


            <CheckBox
                android:id="@+id/checkBox_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/input_check_user"
                android:layout_marginTop="20dp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_check_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/input_check_user"
                android:layout_toRightOf="@+id/checkBox_password"
                android:hint="@string/password">

                <EditText
                    android:id="@+id/owner_check_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"/>

            </android.support.design.widget.TextInputLayout>


            <CheckBox
                android:id="@+id/checkBox_addr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/input_check_password"
                android:layout_marginTop="20dp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_check_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/input_check_password"
                android:layout_toRightOf="@+id/checkBox_addr"
                android:hint="@string/address">

                <EditText
                    android:id="@+id/owner_check_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"/>

            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/checkBox_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/input_check_address"
                android:layout_marginTop="20dp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_check_address_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/input_check_address"
                android:layout_toRightOf="@+id/checkBox_description"
                android:hint="@string/referencia">

                <EditText
                    android:id="@+id/owner_check_address_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"/>
            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/owner_check_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/scrollViewCheck"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        android:src="@drawable/ic_done_black_24dp"/>

</RelativeLayout>
